stop scrollbar

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -150,7 +150,8 @@ iframe{
     font-size: 10vw;
     line-height: 10vw;
     text-align: center;
-    width: 100vw;
+    width: 90vw;
+    left: 5vw;
     z-index: 2;
     transition-property: all;
     transition-duration: 0.75s;
